Quedan las peticiones en internet

--- a/ionic.project
+++ b/ionic.project
@@ -1,4 +1,10 @@
 {
   "name": "AntorchaIonic",
-  "app_id": ""
+  "app_id": "",
+  "proxies": [
+    {
+      "path": "/v1",
+      "proxyUrl": "http://api.antorcha.mx"
+    }
+]
 }
